Arreglo de link footer para github

--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
       </div>
       <div class="redes fs-3 gap-2 link_containers">
         <p class="footer_titulo text-center ">Redes Sociales</p>
-        <a href="#" class="footer_redes" id="insta">Instagram <img class="footer_img" src="/img/iconos/instagram.png"
+        <a href="#" class="footer_redes" id="insta">Instagram <img class="footer_img" src="img/iconos/instagram.png"
             alt="icono de instagram"></a>
-        <a href="#" class="footer_redes" id="face">Facebook <img class="footer_img" src="/img/iconos/facebook.png"
+        <a href="#" class="footer_redes" id="face">Facebook <img class="footer_img" src="img/iconos/facebook.png"
             alt="icono de facebook"></a>
-        <a href="#" class="footer_redes" id="whatsapp">Whatsapp <img src="/img/iconos/whatsapp.png"
+        <a href="#" class="footer_redes" id="whatsapp">Whatsapp <img src="img/iconos/whatsapp.png"
             alt="icono de whatsapp" class="footer_img"></a>
       </div>
     </div>
