arreglo de links del footer

--- a/index.html
+++ b/index.html
@@ -193,19 +193,19 @@
           <p class="footer_titulo  ">Links</p>
           <ul class="fs-5">
             <li><a href="index.html">Home</a></li>
-            <li><a href="/html/sucursal.html">Sucursales</a></li>
-            <li><a href="/html/opinion.html">Opinión</a></li>
+            <li><a href="html/sucursal.html">Sucursales</a></li>
+            <li><a href="html/opinion.html">Opinión</a></li>
           </ul>
         </div>
         <div>
           <p class="footer_titulo ">Menú</p>
           <ul class="fs-5">
-            <li><a href="/html/menu.html#pizza">Pizza</a></li>
-            <li><a href="/html/menu.html#empanada">Empanadas</a></li>
-            <li><a href="/html/menu.html#minuta">Minutas</a></li>
-            <li><a href="/html/menu.html#postre">Postres</a></li>
-            <li><a href="/html/menu.html#bebida">Bebidas</a></li>
-            <li><a href="/html/menu.html#descuento">Descuentos</a></li>
+            <li><a href="html/menu.html#pizza">Pizza</a></li>
+            <li><a href="html/menu.html#empanada">Empanadas</a></li>
+            <li><a href="html/menu.html#minuta">Minutas</a></li>
+            <li><a href="html/menu.html#postre">Postres</a></li>
+            <li><a href="html/menu.html#bebida">Bebidas</a></li>
+            <li><a href="html/menu.html#descuento">Descuentos</a></li>
           </ul>
         </div>
         <div>
@@ -213,11 +213,11 @@
             Delivery
           </p>
           <ul class="fs-5">
-            <li><a href="/html/delivery.html#promos">Promociones</a></li>
-            <li><a href="/html/delivery.html#pizza">Pizza</a></li>
-            <li><a href="/html/delivery.html#empanada">Empanadas</a></li>
-            <li><a href="/html/delivery.html#minuta">Minutas</a></li>
-            <li><a href="/html/delivery.html#bebida">Bebida</a></li>
+            <li><a href="html/delivery.html#promos">Promociones</a></li>
+            <li><a href="html/delivery.html#pizza">Pizza</a></li>
+            <li><a href="html/delivery.html#empanada">Empanadas</a></li>
+            <li><a href="html/delivery.html#minuta">Minutas</a></li>
+            <li><a href="html/delivery.html#bebida">Bebida</a></li>
           </ul>
         </div>
       </div>
