Subida documento Seo

--- a/html/opinion.html
+++ b/html/opinion.html
@@ -14,7 +14,7 @@
     <!-- shortcut icon -->
     <link rel="shortcut icon" href="../img/Utiles/newLogoRedLight.png">
     <!-- title of page -->
-    <title>PIZZA PARTY / Nos importa tu opinion</title>
+    <title>PIZZA PARTY / Nos importa tu opinión</title>
     <meta name="description"
         content="Tu opinión nos importa para mejorar como negocio. No olvides dejar tu opinión llenando nuestro formulario.">
     <meta name="author" content="Lucas Vasquez">
