--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>404 Page not Found<</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <title>404 Page not Found</title>
+    <link rel="stylesheet" href="css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
@@ -14,13 +14,13 @@
     <div class="text-center mt-4">
         <h1 class="titulo">404 Page not Found</h1>
     </div>
-    <div class="img_cont container-xl"><img class="img" src="../img/404/error404.jpg" alt="Minions perdidos"></div>
+    <div class="img_cont container-xl"><img class="img" src="img/404/error404.jpg" alt="Minions perdidos"></div>
     <div>
         <div class="text-center">
             <p class="fs-1">¿Desea regresar a la pagina anterior?</p>
         </div>
         <div class="respuestas">
-            <a class="fs-2" href="../index.html">yes</a><a class="fs-2" href="#">no</a>
+            <a class="fs-2" href="index.html">yes</a><a class="fs-2" href="#">no</a>
         </div>
 
     </div>
