--- a/html/sucursal.html
+++ b/html/sucursal.html
@@ -22,7 +22,7 @@
   <meta name="keywords"
     content="Pizza , Empanadas, Delivery, Sucursales , Av.Corrientes ,Almagro , Balvanera , Av.Callao , Av.Cordoba">
 
-  <Script src="../js/sucursal.js"></Script>
+
 </head>
 
 <body>
@@ -168,7 +168,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-
+  <!-- sucursal js -->
+  <script src="../js/sucursal.js"></script>
 </body>
 
 </html>
